--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><name> Himanshu Choudhary<br /> Ph.D. at IIT Mandi, India</name><br />
+					<h1><name> Himanshu Choudhary,<br /> Ph.D. at IIT Mandi, India</name><br />
 					</a></h1>
 				</div>
 				<nav id="nav">
